--- a/planshet/index.html
+++ b/planshet/index.html
@@ -6,7 +6,6 @@
 <meta name="theme-color" content="#000000">
 <title>PhotoClock Launcher</title>
 <link rel="manifest" href="manifest.json">
-
 <style>
 html, body {
   margin: 0;
@@ -78,7 +77,7 @@ html, body {
 .glass3d > * { position: relative; z-index: 6; }
 
 #info {
-  padding: 12px 20px;
+  padding: 16px;
   text-align: center;
   font-size: 20px;
 }
@@ -95,21 +94,23 @@ html, body {
 }
 
 #weather {
-  margin-top: 6px;
   display: flex;
   justify-content: center;
-  gap: 40px;
-  font-size: 18px;
+  gap: 80px;
+  margin-top: 10px;
 }
+
 #weather div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2px;
+  font-size: 18px;
 }
+
 #weather .temp {
   font-weight: bold;
 }
+
 #select-btn {
   position: absolute;
   top: 10px;
@@ -120,13 +121,14 @@ html, body {
   padding: 6px 12px;
   border-radius: 8px;
   font-size: 14px;
+  z-index: 10;
 }
 </style>
 </head>
-
 <body>
+
 <input type="file" id="fileInput" accept="image/*" hidden>
-<button id="select-btn">Выбрать фото</button>
+<button id="select-btn">Добавить фото</button>
 <img id="bg">
 
 <div class="glass3d" id="glass">
@@ -134,10 +136,10 @@ html, body {
     <div id="clock">00:00:00</div>
     <div id="date">1 января 1970</div>
     <div id="weather">
-      <div><div>🌅 Утро</div><div class="temp" id="morn">--° (--°)</div></div>
-      <div><div>🌇 День</div><div class="temp" id="day">--° (--°)</div></div>
-      <div><div>🌆 Вечер</div><div class="temp" id="eve">--° (--°)</div></div>
-      <div><div>🌃 Ночь</div><div class="temp" id="night">--° (--°)</div></div>
+      <div><div>Утро</div><div class="temp" id="morn">--° (--°)</div></div>
+      <div><div>День</div><div class="temp" id="day">--° (--°)</div></div>
+      <div><div>Вечер</div><div class="temp" id="eve">--° (--°)</div></div>
+      <div><div>Ночь</div><div class="temp" id="night">--° (--°)</div></div>
     </div>
   </div>
 </div>
@@ -158,7 +160,7 @@ fileInput.onchange = e => {
   if (!file) return;
   const reader = new FileReader();
   reader.onload = ev => {
-    bg.src = ev.target.result; // base64 — безопасно
+    bg.src = ev.target.result; // base64 безопасно, без blob
   };
   reader.readAsDataURL(file);
 };
@@ -203,5 +205,6 @@ function updateWeather() {
 updateWeather();
 setInterval(updateWeather, 60 * 60 * 1000);
 </script>
+
 </body>
 </html>
