--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>AI Assistant</title>
 <meta name="theme-color" content="#18181b">
+<meta name="description" content="AI Assistant с распознаванием текста с фото">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="AI Chat">
+<link rel="manifest" href="/manifest.json">
+<link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1698/1698535.png">
+<link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/1698/1698535.png">
+<title>AI Assistant</title>
 
 <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.1.1/dist/tesseract.min.js"></script>
 
 <style>
 /* --- ТЕМА И ЦВЕТА --- */
 :root {
-  --bg-body: #09090b;       /* Почти черный фон страницы */
-  --bg-app: #18181b;        /* Темно-серый фон приложения */
-  --border: #27272a;        /* Границы */
-  --msg-user: #f4f4f5;      /* Сообщение юзера (светлое) */
-  --text-user: #09090b;     /* Текст юзера */
-  --msg-bot: #27272a;       /* Сообщение бота (темное) */
-  --text-bot: #e4e4e7;      /* Текст бота */
-  --accent: #ffffff;        /* Иконки/кнопки */
-  --input-area: #09090b;    /* Фон ввода */
+  --bg-body: #09090b;
+  --bg-app: #18181b;
+  --border: #27272a;
+  --msg-user: #f4f4f5;
+  --text-user: #09090b;
+  --msg-bot: #27272a;
+  --text-bot: #e4e4e7;
+  --accent: #ffffff;
+  --input-area: #09090b;
 }
 
 * { box-sizing: border-box; }
@@ -33,9 +41,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-tap-highlight-color: transparent;
 }
 
-/* Оболочка приложения */
 .app {
   width: 100%;
   max-width: 480px;
@@ -47,7 +55,6 @@ body {
   position: relative;
 }
 
-/* Скругление на десктопе */
 @media (min-width: 500px) {
   .app {
     height: 90vh;
@@ -64,7 +71,9 @@ header {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid var(--border);
-  background: rgba(24, 24, 27, 0.9);
+  background: rgba(24, 24, 27, 0.95);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   z-index: 10;
 }
 
@@ -97,9 +106,12 @@ h1 {
   padding: 8px;
   border-radius: 8px;
   transition: 0.2s;
+  -webkit-appearance: none;
+  touch-action: manipulation;
 }
 
-.btn-icon:hover {
+.btn-icon:hover,
+.btn-icon:active {
   background: var(--border);
   color: #fff;
 }
@@ -113,6 +125,7 @@ h1 {
   flex-direction: column;
   gap: 16px;
   scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 
 #chat::-webkit-scrollbar { width: 5px; }
@@ -125,7 +138,7 @@ h1 {
   line-height: 1.5;
   font-size: 15px;
   word-wrap: break-word;
-  white-space: pre-wrap; /* Сохраняет абзацы */
+  white-space: pre-wrap;
   animation: slideIn 0.2s ease;
 }
 
@@ -158,7 +171,7 @@ h1 {
 
 /* --- ИНДИКАТОР ЗАГРУЗКИ --- */
 .typing-indicator {
-  display: none; /* Скрыт по умолчанию */
+  display: none;
   align-self: flex-start;
   background: var(--msg-bot);
   padding: 12px 16px;
@@ -190,6 +203,7 @@ footer {
   display: flex;
   align-items: flex-end;
   gap: 10px;
+  padding-bottom: max(16px, env(safe-area-inset-bottom));
 }
 
 .input-box {
@@ -234,11 +248,29 @@ textarea {
   cursor: pointer;
   transition: 0.2s;
   flex-shrink: 0;
+  touch-action: manipulation;
 }
 
 .send-btn:hover { transform: scale(1.05); background: #e4e4e7; }
 .send-btn:disabled { background: #3f3f46; color: #71717a; cursor: default; transform: none; }
 
+/* PWA установка */
+#installPWA {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff;
+  color: #000;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 24px;
+  font-weight: 600;
+  cursor: pointer;
+  z-index: 1000;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+}
 </style>
 </head>
 <body>
@@ -281,7 +313,54 @@ textarea {
   </footer>
 </div>
 
+<button id="installPWA">Установить приложение</button>
+
 <script>
+// PWA установка
+let deferredPrompt;
+const installBtn = document.getElementById('installPWA');
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  installBtn.style.display = 'block';
+  
+  setTimeout(() => {
+    installBtn.style.display = 'none';
+  }, 10000);
+});
+
+installBtn.addEventListener('click', async () => {
+  if (!deferredPrompt) return;
+  
+  deferredPrompt.prompt();
+  const { outcome } = await deferredPrompt.userChoice;
+  
+  if (outcome === 'accepted') {
+    installBtn.style.display = 'none';
+  }
+  deferredPrompt = null;
+});
+
+window.addEventListener('appinstalled', () => {
+  installBtn.style.display = 'none';
+  deferredPrompt = null;
+});
+
+// Регистрация Service Worker
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/sw.js')
+      .then(registration => {
+        console.log('ServiceWorker зарегистрирован');
+      })
+      .catch(err => {
+        console.log('Ошибка регистрации ServiceWorker:', err);
+      });
+  });
+}
+
+// Остальной код приложения
 const chat = document.getElementById("chat");
 const loader = document.getElementById("loader");
 const input = document.getElementById("input");
@@ -307,18 +386,14 @@ function addMessageToUI(content, type, isImage = false) {
   if (isImage) {
     const img = document.createElement("img");
     img.src = content;
+    img.loading = "lazy";
     div.appendChild(img);
   } else {
     div.textContent = content;
   }
   
-  // Добавляем сообщение
   chat.appendChild(div);
-  
-  // Перемещаем лоадер в самый конец (чтобы он всегда был после сообщений)
   chat.appendChild(loader);
-  
-  // Скролл вниз
   chat.scrollTop = chat.scrollHeight;
 }
 
@@ -327,24 +402,20 @@ async function send() {
   const text = input.value.trim();
   if (!text) return;
 
-  // Очистка поля
   input.value = "";
-  input.style.height = 'auto'; 
+  input.style.height = 'auto';
   
-  // Показать сообщение юзера
   addMessageToUI(text, "user");
   
-  // Сохранить в историю и память
   history.push({ role: "user", content: text });
   saveHistory();
 
-  // Включить загрузку
   toggleLoader(true);
 
   try {
     const context = [
       { role: "system", content: "Ты полезный помощник. Отвечай кратко." },
-      ...history.slice(-8) // берем последние 8 сообщений
+      ...history.slice(-8)
     ];
 
     const res = await fetch("https://text.pollinations.ai/openai", {
@@ -377,7 +448,6 @@ function toggleLoader(show) {
 }
 
 function saveHistory() {
-  // Фильтруем (не сохраняем base64 картинки, чтобы не забить память)
   const safe = history.filter(h => h.content.length < 2000);
   localStorage.setItem("ai_chat_v3", JSON.stringify(safe));
 }
@@ -389,22 +459,20 @@ imageInput.addEventListener("change", async () => {
 
   const reader = new FileReader();
   reader.onload = async function(e) {
-    // Показываем фото в чате (не сохраняя в историю навсегда)
     addMessageToUI(e.target.result, "user", true);
 
-    toggleLoader(true); // Показываем анимацию
+    toggleLoader(true);
     
-    // Временно выводим текст бота
     const statusMsg = document.createElement("div");
     statusMsg.className = "msg bot";
     statusMsg.textContent = "🔍 Читаю текст с картинки...";
-    chat.insertBefore(statusMsg, loader); // Вставляем перед лоадером
+    chat.insertBefore(statusMsg, loader);
 
     try {
       const result = await Tesseract.recognize(file, "rus+eng");
       const text = result.data.text.trim();
       
-      statusMsg.remove(); // Удаляем статус
+      statusMsg.remove();
 
       if (text) {
         input.value = text;
@@ -435,8 +503,7 @@ input.addEventListener('input', () => autoResize(input));
 input.addEventListener("keydown", e => {
   if (e.key === "Enter" && !e.shiftKey) {
     e.preventDefault();
-    if(window.innerWidth > 600) send(); // На десктопе сразу отправляем
-    else send(); // На мобильном тоже (поведение Telegram)
+    send();
   }
 });
 
@@ -445,11 +512,27 @@ function clearHistory() {
     localStorage.removeItem("ai_chat_v3");
     history = [];
     chat.innerHTML = "";
-    chat.appendChild(loader); // Возвращаем лоадер на место
+    chat.appendChild(loader);
     addMessageToUI("История очищена.", "bot");
   }
 }
-</script>
 
+// Предотвращение потери данных при закрытии
+window.addEventListener('beforeunload', (e) => {
+  if (input.value.trim()) {
+    e.preventDefault();
+    e.returnValue = '';
+  }
+});
+
+// Обработка online/offline статуса
+window.addEventListener('online', () => {
+  addMessageToUI("✅ Соединение восстановлено", "bot");
+});
+
+window.addEventListener('offline', () => {
+  addMessageToUI("⚠️ Вы offline, некоторые функции недоступны", "bot");
+});
+</script>
 </body>
 </html>
