--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="AI Chat">
 <link rel="manifest" href="/manifest.json">
-<link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1698/1698535.png">
-<link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/1698/1698535.png">
+<link rel="icon" type="image/png" href="./logo_512.png">
+<link rel="apple-touch-icon" href="./logo_512.png">
 <title>AI Assistant</title>
 
 <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.1.1/dist/tesseract.min.js"></script>
