--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ async function send() {
 
   try {
     const context = [
-      { role: "system", content: "Ты полезный помощник. Отвечай кратко." },
+      { role: "system", content: "" },
       ...history.slice(-8)
     ];
 
