--- a/3d/index.html
+++ b/3d/index.html
@@ -275,7 +275,7 @@
             <!-- Основной просмотрщик модели -->
             <model-viewer
                 id="model-viewer"
-                src="model.glb"
+                src="model/model.glb"
                 alt="3D модель"
                 camera-controls
                 auto-rotate
