--- a/3d/index.html
+++ b/3d/index.html
@@ -269,7 +269,7 @@
 
     <script>
         // Конфигурация
-        const MODEL_URL = 'https://example.com/model.glb'; // ← ЗАМЕНИТЕ НА СВОЮ ССЫЛКУ
+        const MODEL_URL = 'https://drive.google.com/file/d/1d9dag7iqVI5WsmtCoRWh1yJhZIosyrz0/view?usp=sharing'; // ← ЗАМЕНИТЕ НА СВОЮ ССЫЛКУ
         
         // Элементы DOM
         const modelViewer = document.getElementById('model-viewer');
